# CacheTest

./: .gitmodules  CMakeLists.txt  readme.md
.cache/clangd/index/: logger.cpp.501BD38BC68A16BF.idx  logger.hpp.26C86571685560E3.idx  logger_appearance.hpp.B799F58FEC08BF65.idx  main.cpp.BBC07DFE809AA12D.idx
Tests/: runtest.sh
install/: local_setup.sh  setup.sh
log/: Logfile.html
source/: cash_2q_tester.cpp  cash_ideal_tester.cpp  main.cpp
source/Cash2QLib/: CMakeLists.txt
source/Cash2QLib/include/Cash2QLib/: casher.hpp  page_list.hpp
source/CashIdeal/: CMakeLists.txt
source/CashIdeal/include/CashIdeal/: casher.hpp
source/CashLib/: CMakeLists.txt
source/CashLib/include/CashLib/: casher.hpp  page_list.hpp
